# phigros-ability

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  failed.html  index.html  success.html
css/: failed copy.css  failed.css  main.css  styles.css  success.css
docs/: CNAME  index.html  phigros-ability  tailwind.css
docs/assets/dioxus/: phigros-ability.js  phigros-ability_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
js/: PhigrosAbility.js  SongData.js  ability.js  failed.js  main.js  success.js
public/: tailwind.css
scss/: failed.scss  main.scss  success.scss
src/: app.rs  main.rs  song_datas.json
ts/: PhigrosAbility.ts  SongData.ts  ability.ts  failed.ts  main.ts  success.ts
