[package]
name = "phigros-ability"
version = "0.1.0"
authors = ["almagest"]
edition = "2021"

[dependencies]
dioxus = { version = "0.4" }
dioxus-logger = "0.4.1"
dioxus-web = { version = "0.4" }
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
wasm-logger = "0.2.0"
